; (library
;  (name chat)
;  (libraries websocket-lwt-unix)
;  (modules client server))

; (executables
;  (names client server)
;  (libraries websocket-lwt-unix core_unix core_unix.time_unix)
;  (modules client server))

(executables
 (names connector listener)
 (libraries websocket-lwt-unix core_unix core_unix.time_unix)
 (modules connector listener server client))

; (env
;  (dev
;   (flags
;    (:standard -w -32))))
